[gd_scene load_steps=4 format=3 uid="uid://dfl5mpme2t4lx"]

[ext_resource type="Script" path="res://src/login_screen.gd" id="1_nrvhv"]
[ext_resource type="Texture2D" uid="uid://rf86x1ivenf3" path="res://addons/tattomoosa.spinner/icons/StatusIndicator.svg" id="2_jjxoh"]
[ext_resource type="Texture2D" uid="uid://i6esq6rgrc00" path="res://addons/tattomoosa.spinner/icons/StatusWarning.svg" id="3_7q75k"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nrvhv")

[node name="BGColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -214.0
offset_right = 257.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.233925, 0.233925, 0.233925, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 2
offset_left = 1.0
offset_top = 47.0
offset_right = 515.0
offset_bottom = 97.0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 36
text = "Login"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 143.0
offset_right = -15.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmailInput" type="LineEdit" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 22
placeholder_text = "Email"

[node name="HSeparator" type="HSeparator" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PasswdInput" type="LineEdit" parent="ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 22
placeholder_text = "Senha"
secret = true

[node name="ShowPassButton" type="TextureButton" parent="ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_jjxoh")
texture_pressed = ExtResource("3_7q75k")
stretch_mode = 5

[node name="LoginButton" type="Button" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 376.0
offset_top = 366.0
offset_right = 514.0
offset_bottom = 419.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 22
text = "Entrar"

[node name="SubmitRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
